static/elements.css
/*
#panel_filebrowser .content {
	overflow: auto;
	padding: 8px;
	position: absolute;
	top: 21px;
	bottom: 0;
}
*/

#panel_filebrowser .content > li {
	float: left;
	list-style-type: none;
	margin: 8px;
	width: 96px;
	height: 96px;
	border-radius: 8px;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	cursor: pointer;
}

#panel_filebrowser .content > li:hover div {
	opacity: 0.7;
	filter: alpha(opacity = 70);
}

#panel_filebrowser .content > li.selected {
	background: #f5f5f5;
	border: 1px solid #eee;
	margin: 7px;
}

#panel_filebrowser .content div {
	margin: 4px 16px;
	width: 64px;
	height: 64px;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-o-user-select: none;
	user-select: none;
}

#panel_filebrowser .content div pre {
	position: relative;
	left: 8px;
	top: 8px;
	width: 48px;
	height: 48px;
	overflow: hidden;
	font-family: monospace;
	font-size: 8px;
}

#panel_filebrowser .content div img {
	padding: 4px;
	display: block;
	margin: 0 auto;
	border-radius: 3px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.8);
	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.8);
	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.8);
}

/*
#panel_filebrowser .content div.text {
	width: 62px;
	height: 62px;
	padding: 8px;
	white-space: pre;
	text-overflow: ellipsis;
	background: #fff;
	border: 1px solid #ccc;
	border-radius: 8px;
	-moz-border-radius: 8px;
	-webkit-border-radius: 8px;
	box-shadow: 0 4px 8px rgba(0,0,0,.1), 0 0 0 4px #fff inset, 0 -16px 40px rgba(0,0,0,.05) inset;
	-moz-box-shadow: 0 4px 8px rgba(0,0,0,.1), 0 0 0 4px #fff inset, 0 -16px 40px rgba(0,0,0,.05) inset;
	-webkit-box-shadow: 0 4px 8px rgba(0,0,0,.1), 0 0 0 4px #fff inset, 0 -16px 40px rgba(0,0,0,.05) inset;
}
*/

#panel_filebrowser .content input[type=text] {
	border: none;
	width: 100%;
	text-align: center;
	text-overflow: ellipsis;
	background: none;
	outline: none;
}

#panel_filebrowser .header > button:first-child {
	background-image: url("images/home.png");
	background-repeat: no-repeat;
	background-position: center center;
	color: transparent;
	width: 28px;
}

#panel_dictionary input {
	height: 25px;
	width: 100%;
}

#panel_dictionary ul {
	padding: 0;
}

#panel_dictionary li {
	padding: 8px;
	border-bottom: 1px dotted #ccc;
}

#panel_dictionary li:last-child {
	border-bottom: none;
}

#panel_dictionary li:hover {
	background: #f5f5f5;
}

button {
	font-size: 14px;
	padding: 2px 8px;
	outline: none;
}

button:hover {
}

.tab {
	padding-bottom: 0;
}

.tab > button {
	margin-top: 3px;
	float: left;
	margin-right: 4px;
}

.tab > button.current {
}

.tab > button:hover {
}

h2 > button {
	background: #ddd;
	color: #ddd;
	float: right;
	font-size: 14px;
	height: 18px;
	line-height: 0;
	margin-left: 2px;
	margin-top: -5px;
	margin-bottom: 4px;
	padding: 0;
	text-align: center;
	font-weight: bold;
	width: 24px;
	outline: none;
}

h2 > button:hover {
	color: #888;
	outline: none;
	text-shadow: 0 1px #fff;
}

h2 > button.min:hover {
	background: lightBlue;
}

h2 > button.max:hover {
	background: lightGreen;
}

h2 > button.close:hover {
	background: salmon;
}

.footer > span {
	float: left;
	display: block;
	font-size: 14px;
	padding: 4px 2px;
	color: #888;
}

.footer > button {
	float: right;
	margin-left: 4px;
}

#canvas {
	position: relative;
}

#canvas.shadow:before {
	content: "see your hard work here!";
	display: block;
	margin: -8px 0;
	position: absolute;
	top: 50%;
	width: 100%;
	text-align: center;
}

iframe {
	border: none;
}

.input {
	padding: 4px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	outline: none;
}

.comment {
	border: 1px solid #aaa;
	box-shadow: 0 4px 8px #eee inset;
	-moz-box-shadow: 0 4px 8px #eee inset;
	-webkit-box-shadow: 0 4px 8px #eee inset;
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	padding: 4px;
	font-size: 14px;
	color: #888;
	position: relative;
}

.comment:after, .comment:before {
	border: solid transparent;
	content: ' ';
	height: 0;
	top: 100%;
	position: absolute;
	width: 0;
}

.comment:after {
	border-width: 7px;
	border-top-color: #fff;
	left: 9px;
}

.comment:before {
	border-width: 8px;
	border-top-color: #888;
	left: 8px;
}


/* syntax highlighting */
.ldt {
}

span.cmd { color: green; }
span.num { color: navy; }
span.str { color: blue; }
span.box { color: red; }
span.cmt { color: gray; }
span.err { border-bottom: 1px dotted red; }

span.code { font-family: monospace; }

/* show tabs */
.ldt .arr {
	position: relative;
}

/* draws a line */
.ldt .arr:before {
	content: '';
	position: absolute;
	overflow: hidden;
	top: 0;
	left: 2px;
	right: 6px;
	margin-top: 8px;
	height: 2px;
	background: silver;
}

/* draws a small triangle */
.ldt .arr:after {
	content: '';
	position: absolute;
	display: block;
	width: 0;
	height: 0;
	top: 4px;
	right: 2px;
	border: 5px dotted transparent;
	border-left: 5px solid silver;
	border-right: 0;
}

/* two column forms */
form > label {
	float: left;
	width: 40%;
	padding-right: 12px;
	margin-bottom: 12px;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
}

form > input, form > select {
	float: left;
	width: 60%;
	margin-bottom: 12px;
}

/* context menu */
ul.contextmenu {
	display: block;
	position: absolute;
	font: menu;
	background: Menu;
	color: MenuText;
	border: 1px solid ThreeDShadow;
	box-shadow: 0 5px 18px rgba(0,0,0,0.6);
	-moz-box-shadow: 0 5px 18px rgba(0,0,0,0.6);
	-webkit-box-shadow: 0 5px 18px rgba(0,0,0,0.6);
}

ul.contextmenu > li {
	display: block;
	width: 150px;
	padding: .2em 1em;
	cursor: default;
}

ul.contextmenu > li:hover {
	background: Highlight;
	color: HighlightText;
}

/* bsod easter egg */
#bsod {
	position: absolute;
	top: 50%;
	left: 50%;
	height: 480px;
	width: 640px;
	margin: -240px -320px;
	color: white;
	font-size: 16px;
	font-family: monospace;
	text-align: center;
}

#bsod > h1 {
	display: inline;
	background: white;
	color: blue;
	font-weight: normal;
	font-size: inherit;
}

#bsod > p {
	margin-top: 16px;
}

#bsod > pre {
	margin-top: 16px;
	text-align: left;
	white-space: pre-wrap;
}

